Changed a few things - Not much changed

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="slider-text d-md-flex align-items-center" data-scrollax-parent="true">
 
           <div class="one-forth pr-md-4 ftco-animate align-self-md-center" data-scrollax=" properties: { translateY: '70%' }">
-          	<h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Design. <br> Development. <br> Hosting.</h1>
+          	<h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Immutable. <br> Easy to Use. <br> Decentralized.</h1>
             <p class="mb-md-5 mb-sm-3" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
             <p data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><a href="#" class="btn btn-primary px-4 py-3">Get started</a></p>
           </div>
@@ -92,8 +92,13 @@
             <div class="media block-6 services d-block text-center">
               <div class="d-flex justify-content-center"><div class="icon"><span class="flaticon-guarantee"></span></div></div>
               <div class="media-body p-2 mt-3">
-                <h3 class="heading">100% Uptime Guarantee</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                <h3 class="heading">100% immutability Guarantee</h3>
+                <p>ethoFS is 100% immutable the only way your content can be remove from the ethoFS network is if:</p>
+                <ul>
+                <li>The community votes for it to be removed.</li>
+                <li>You cancel your hosting contract.</li>
+                <li>The hosting Contract expires.</li>
+              </ul>
               </div>
             </div>
           </div>
@@ -102,7 +107,8 @@
               <div class="d-flex justify-content-center"><div class="icon"><span class="flaticon-shield"></span></div></div>
               <div class="media-body p-2 mt-3">
                 <h3 class="heading">Safe and Secured</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                <p>No one can access your ethoFS account as it is linked to your ETHO Wallets Private key.
+                The only way a user can access your uploaded data is if you provide them with your unique link.</p>
               </div>
             </div>
           </div>
@@ -111,7 +117,7 @@
               <div class="d-flex justify-content-center"><div class="icon"><span class="flaticon-support"></span></div></div>
               <div class="media-body p-2 mt-3">
                 <h3 class="heading">Our Dedicated Support</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                <p>The Ether-1 Team is available 24/7 to help you with any errors you encounter. If there's no team members available there will be a community member happy to help!</p>
               </div>
             </div>
           </div>
@@ -419,7 +425,7 @@
         </div>
       </div>
     </section>
-
+<script src="https://static.coingecko.com/s/application-47b39f4e9171adcdd763ff590fbdf58052178461c90823262fa4463ee1bfa0c6.js"></script>
     <section class="ftco-section bg-light">
       <div class="container">
         <div class="row justify-content-center mb-5 pb-5">
@@ -482,7 +488,7 @@
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Ether-1.</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <script src="https://static.coingecko.com/s/application-47b39f4e9171adcdd763ff590fbdf58052178461c90823262fa4463ee1bfa0c6.js"></script>
               <p class="mt-4"><a href="#" class="btn btn-primary p-3">Get in touch</a></p>
             </div>
           </div>
