--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
         </div>
       </div>
     </section>
-<script src="https://static.coingecko.com/s/application-47b39f4e9171adcdd763ff590fbdf58052178461c90823262fa4463ee1bfa0c6.js"></script>
+
     <section class="ftco-section bg-light">
       <div class="container">
         <div class="row justify-content-center mb-5 pb-5">
@@ -488,7 +488,7 @@
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Ether-1.</h2>
-              <script src="https://static.coingecko.com/s/application-47b39f4e9171adcdd763ff590fbdf58052178461c90823262fa4463ee1bfa0c6.js"></script>
+              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
               <p class="mt-4"><a href="#" class="btn btn-primary p-3">Get in touch</a></p>
             </div>
           </div>
