Added a Space for the Halvings

--- a/index.html
+++ b/index.html
@@ -209,49 +209,21 @@
     	<div class="container">
     		<div class="row justify-content-center mb-5 pb-5">
           <div class="col-md-7 text-center heading-section heading-section-white ftco-animate">
-            <h2 class="mb-4">Some fun facts</h2>
-            <span class="subheading">More than 100,000 websites hosted</span>
+            <h2 class="mb-4">ETHO Reward Halving Count down:</h2>
+<!-----HYPE ADD THE CODE HERE--->
+<!-----HYPE ADD THE CODE HERE--->
+<!-----HYPE ADD THE CODE HERE--->
+<!-----HYPE ADD THE CODE HERE--->
+<!-----HYPE ADD THE CODE HERE--->
+<!-----HYPE ADD THE CODE HERE--->
+<!-----HYPE ADD THE CODE HERE--->
+<!-----HYPE ADD THE CODE HERE--->
+<!-----HYPE ADD THE CODE HERE--->
+<!-----HYPE ADD THE CODE HERE--->
+
           </div>
         </div>
-    		<div class="row justify-content-center">
-    			<div class="col-md-10">
-		    		<div class="row">
-		          <div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
-		            <div class="block-18 text-center">
-		              <div class="text">
-		                <strong class="number" data-number="2000">0</strong>
-		                <span>CMS Installation</span>
-		              </div>
-		            </div>
-		          </div>
-		          <div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
-		            <div class="block-18 text-center">
-		              <div class="text">
-		                <strong class="number" data-number="100">0</strong>
-		                <span>Awards Won</span>
-		              </div>
-		            </div>
-		          </div>
-		          <div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
-		            <div class="block-18 text-center">
-		              <div class="text">
-		                <strong class="number" data-number="32000">0</strong>
-		                <span>Registered Domains</span>
-		              </div>
-		            </div>
-		          </div>
-		          <div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
-		            <div class="block-18 text-center">
-		              <div class="text">
-		                <strong class="number" data-number="31998">0</strong>
-		                <span>Satisfied Customers</span>
-		              </div>
-		            </div>
-		          </div>
-		        </div>
-	        </div>
-        </div>
-    	</div>
+      </div>
     </section>
 
     <section class="ftco-section testimony-section bg-light">
