--- a/index.html
+++ b/index.html
@@ -222,8 +222,9 @@ $var1 = ( $result->block_height );
 $var2 = ( 2000000 - $var1 );
 $var3 = ( $var2 * 13 );
 $var4 = ( $var3 / 86400 );
+$var5 = ( round($var4));
 
-echo "<ul><li>$var2 Blocks Until Halving</li><li>$var4 Days Left</li></ul>";
+echo "<ul><li>$var2 Blocks Until Halving</li><li>$var5 Days Left</li></ul>";
 
 
 ?>
