--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ $var3 = ( $var2 * 13 );
 $var4 = ( $var3 / 86400 );
 $var5 = ( round($var4));
 
-echo "<ul><li>$var2 Blocks Until Halving</li><li>$var5 Days Left</li></ul>";
+echo "$var2 Blocks Until Halving<br>$var5 Days Left";
 
 
 ?>
